--- a/queuing_release.css
+++ b/queuing_release.css
@@ -391,3 +391,123 @@ table{
     margin-top: -5%;
     text-align: center;
 }
+
+/* RESPONSIVE */
+
+@media screen and (min-width: 768px) {
+    .backbtn{
+        float: right;
+        padding: 10px 10px 10px 10px;
+        font-size: 15px;
+        margin-top: 13%;
+    }
+    
+}
+
+@media screen and (min-width: 848px) {
+    .backbtn{
+        float: right;
+        padding: 11px 11px 11px 11px;
+        font-size: 15px;
+        margin-top: 12%;
+    }
+    
+}
+
+@media screen and (min-width: 936px) {
+    .backbtn{
+        float: right;
+        padding: 12px 12px 12px 12px;
+        font-size: 15px;
+        margin-top: 10%;
+    }
+    
+}
+
+@media screen and (min-width: 1050px) {
+    .backbtn{
+        float: right;
+        padding: 13px 13px 13px 13px;
+        font-size: 15px;
+        margin-top: 9%;
+    }
+    
+}
+
+@media screen and (min-width: 1168px) {
+    .backbtn{
+        float: right;
+        padding: 13px 13px 13px 13px;
+        font-size: 15px;
+        margin-top: 8%;
+    }
+    
+}
+
+@media screen and (min-width: 1257px) {
+    .backbtn{
+        float: right;
+        padding: 15px 15px 15px 15px;
+        font-size: 15px;
+        margin-top: 7%;
+    }
+    
+}
+
+@media screen and (min-width: 1350px) {
+    .backbtn{
+        float: right;
+        padding: 15px 15px 15px 15px;
+        font-size: 15px;
+        margin-top: 6.5%;
+    }
+}
+
+@media screen and (min-width: 1411px) {
+    .backbtn{
+        float: right;
+        padding: 15px 15px 15px 15px;
+        font-size: 15px;
+        margin-top: 6.5%;
+    }
+    
+}
+
+@media screen and (min-width: 1615px) {
+    .backbtn{
+        float: right;
+        padding: 16px 16px 16px 16px;
+        font-size: 16px;
+        margin-top: 5.5%;
+    }
+    
+}
+
+@media screen and (min-width: 1771px) {
+    .backbtn{
+        float: right;
+        padding: 17px 17px 17px 17px;
+        font-size: 17px;
+        margin-top: 4.5%;
+    }
+}
+
+@media screen and (min-width: 1880px) {
+    .backbtn{
+        float: right;
+        padding: 17px 17px 17px 17px;
+        font-size: 17px;
+        margin-top: 4.5%;
+    }
+    
+}
+
+@media screen and (min-width: 1920px) {
+    .backbtn{
+        float: right;
+        padding: 17px 17px 17px 17px;
+        font-size: 17px;
+        margin-top: 4.5%;
+    }
+    
+}
