--- a/superadmin_inventory.css
+++ b/superadmin_inventory.css
@@ -200,7 +200,7 @@ h2{
 /* MENU BAR*/
 
 .container{
-    height: 81.7%;
+    height: 100%;
     width: 270px;
     position: absolute;
     margin-top: -120px;
@@ -327,7 +327,13 @@ table{
     border-collapse: collapse; 
 }
 
+table tr:nth-child(even) {
+    background-color: lightgray; 
+}
 
+ table tr:nth-child(odd) {
+    background-color: #ffffff; 
+}
 
 .table-number{
     width: 60px;
@@ -383,7 +389,7 @@ table tr td{
 /* RESPONSIVE */
 @media screen and (min-width: 768px) {
     .container{
-        height: 81.7%;
+        height: 100%;
         width: 210px;
         position: absolute;
         margin-top: -18%;
@@ -500,7 +506,7 @@ table tr td{
 
 @media screen and (min-width: 848px) {
     .container{
-        height: 81.7%;
+        height: 100%;
         width: 210px;
         position: absolute;
         margin-top: -15%;
@@ -617,7 +623,7 @@ table tr td{
 
 @media screen and (min-width: 936px) {
     .container{
-        height: 81.7%;
+        height: 100%;
         width: 210px;
         position: absolute;
         margin-top: -14%;
@@ -734,7 +740,7 @@ table tr td{
 
 @media screen and (min-width: 1050px) {
     .container{
-        height: 81.7%;
+        height: 100%;;
         width: 250px;
         position: absolute;
         margin-top: -12%;
@@ -851,10 +857,10 @@ table tr td{
 
 @media screen and (min-width: 1168px) {
     .container{
-        height: 81.7%;
+        height: 100%;
         width: 270px;
         position: absolute;
-        margin-top: -11%;
+        margin-top: -10.2%;
         background: #162fa0;
         z-index: 1;
         transition: transform 0.5s;
@@ -968,10 +974,10 @@ table tr td{
 
 @media screen and (min-width: 1257px) {
     .container{
-        height: 81.7%;
+        height: 100%;
         width: 270px;
         position: absolute;
-        margin-top: -10%;
+        margin-top: -9.3%;
         background: #162fa0;
         z-index: 1;
         transition: transform 0.5s;
@@ -1085,7 +1091,7 @@ table tr td{
 
 @media screen and (min-width: 1350px) {
     .container{
-        height: 81.7%;
+        height: 100%;
         width: 270px;
         position: absolute;
         margin-top: -9%;
@@ -1202,7 +1208,7 @@ table tr td{
 
 @media screen and (min-width: 1411px) {
     .container{
-        height: 81.7%;
+        height: 100%;;
         width: 270px;
         position: absolute;
         margin-top: -7.2%;
@@ -1317,9 +1323,127 @@ table tr td{
     
 }
 
+
+@media screen and (min-width: 1536px) {
+    .container{
+        height: 100%;;
+        width: 270px;
+        position: absolute;
+        margin-top: -7.5%;
+        background: #162fa0;
+        z-index: 1;
+        transition: transform 0.5s;
+        transform: translateX(-270px);
+    }
+
+    .container .head{
+        color: white;
+        font-size: 25px;
+        font-weight: bold;
+        padding: 30px;
+        text-transform: uppercase;
+        text-align: center;
+        letter-spacing: 3px;
+        background: #7c9885;
+    }
+
+    ol li a{
+        color: white;
+        padding: 20px 20px 0px 0px;
+        text-decoration: none;
+        display: block;
+        font-size: 18px;
+        letter-spacing: 1px;
+        position: relative;
+        transition: 0.3s;
+        overflow: hidden;
+        text-transform: capitalize;
+    }
+
+    ol li a i{
+        margin-left: -10px;
+        width: 70px;
+        font-size: 22px;
+        text-align: center;
+    }
+
+    .searchbar{
+        float: right;
+        margin: 140px 24% 0px 0px;  
+    }
+
+    .searchbar input{
+        width: 100%;
+    }
+
+    .convertbtn{
+        float: right;
+        text-decoration: none;
+        margin: 135px -34% 0px 0px;
+        height: 25%;
+        width: 10%;
+        border-radius: 15px;
+        cursor: pointer;
+        background: transparent;
+        color: white;
+        border: 1px solid black;
+        outline: none;
+        font-size: 15px;
+    }
+    
+    .deletebtn{
+        float: right;
+        text-decoration: none;
+        margin: 135px -23% 0px 0px;
+        height: 25%;
+        width: 10%;
+        border-radius: 15px;
+        cursor: pointer;
+        background: transparent;
+        color: white;
+        border: 1px solid black;
+        outline: none;
+        font-size: 15px;
+    }
+
+    h2{
+        font-size: 36px;
+        margin-left: 40%;
+    }
+    
+    table{
+        font-size: 20px;
+        margin-left: 0px;
+        width: 100%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+
+    
+    .scroll{
+        width: 90%;
+        height: 350px;
+        margin-left: 5%;
+        margin-top: 10px;
+        overflow-y: scroll;
+    }
+
+    .sorting{
+        font-size: 18px;
+        font-weight: bold;
+        margin: 0px 0px 0px 82%;
+    }
+    
+    .sorting select{
+        border: 2px solid black;
+        font-size: 15px;
+    }
+    
+}
+
 @media screen and (min-width: 1615px) {
     .container{
-        height: 81.7%;
+        height: 100%;;
         width: 270px;
         position: absolute;
         margin-top: -7%;
@@ -1436,7 +1560,7 @@ table tr td{
 
 @media screen and (min-width: 1771px) {
     .container{
-        height: 81.7%;
+        height: 100%;
         width: 270px;
         position: absolute;
         margin-top: -5.2%;
@@ -1505,6 +1629,240 @@ table tr td{
         float: right;
         text-decoration: none;
         margin: 135px -21% 0px 0px;
+        height: 25%;
+        width: 10%;
+        border-radius: 15px;
+        cursor: pointer;
+        background: transparent;
+        color: white;
+        border: 1px solid black;
+        outline: none;
+        font-size: 15px;
+    }
+
+    h2{
+        font-size: 36px;
+        margin-left: 40%;
+    }
+    
+    table{
+        font-size: 20px;
+        margin-left: 0px;
+        width: 100%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+
+    
+    .scroll{
+        width: 90%;
+        height: 350px;
+        margin-left: 5%;
+        margin-top: 10px;
+        overflow-y: scroll;
+    }
+
+    .sorting{
+        font-size: 18px;
+        font-weight: bold;
+        margin: 0px 0px 0px 85%;
+    }
+    
+    .sorting select{
+        border: 2px solid black;
+        font-size: 15px;
+    }
+    
+}
+
+@media screen and (min-width: 1880px) {
+    .container{
+        height: 100%;
+        width: 290px;
+        position: absolute;
+        margin-top: -5.3%;
+        background: #162fa0;
+        z-index: 1;
+        transition: transform 0.5s;
+        transform: translateX(-290px);
+    }
+
+    .container .head{
+        color: white;
+        font-size: 30px;
+        font-weight: bold;
+        padding: 30px;
+        text-transform: uppercase;
+        text-align: center;
+        letter-spacing: 3px;
+        background: #7c9885;
+    }
+
+    ol li a{
+        color: white;
+        padding: 20px 20px 0px 0px;
+        text-decoration: none;
+        display: block;
+        font-size: 20px;
+        letter-spacing: 1px;
+        position: relative;
+        transition: 0.3s;
+        overflow: hidden;
+        text-transform: capitalize;
+    }
+
+    ol li a i{
+        margin-left: -10px;
+        width: 70px;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .searchbar{
+        float: right;
+        margin: 140px 23% 0px 0px;  
+    }
+
+    .searchbar input{
+        width: 100%;
+    }
+
+    .convertbtn{
+        float: right;
+        text-decoration: none;
+        margin: 135px -30% 0px 0px;
+        height: 25%;
+        width: 10%;
+        border-radius: 15px;
+        cursor: pointer;
+        background: transparent;
+        color: white;
+        border: 1px solid black;
+        outline: none;
+        font-size: 15px;
+    }
+    
+    .deletebtn{
+        float: right;
+        text-decoration: none;
+        margin: 135px -19.5% 0px 0px;
+        height: 25%;
+        width: 10%;
+        border-radius: 15px;
+        cursor: pointer;
+        background: transparent;
+        color: white;
+        border: 1px solid black;
+        outline: none;
+        font-size: 15px;
+    }
+
+    h2{
+        font-size: 36px;
+        margin-left: 40%;
+    }
+    
+    table{
+        font-size: 20px;
+        margin-left: 0px;
+        width: 100%;
+        border: 2px solid black;
+        border-collapse: collapse; 
+    }
+
+    
+    .scroll{
+        width: 90%;
+        height: 350px;
+        margin-left: 5%;
+        margin-top: 10px;
+        overflow-y: scroll;
+    }
+
+    .sorting{
+        font-size: 18px;
+        font-weight: bold;
+        margin: 0px 0px 0px 85%;
+    }
+    
+    .sorting select{
+        border: 2px solid black;
+        font-size: 15px;
+    }
+    
+}
+
+@media screen and (min-width: 1920px) {
+    .container{
+        height: 100%;
+        width: 290px;
+        position: absolute;
+        margin-top: -5.5%;
+        background: #162fa0;
+        z-index: 1;
+        transition: transform 0.5s;
+        transform: translateX(-290px);
+    }
+
+    .container .head{
+        color: white;
+        font-size: 30px;
+        font-weight: bold;
+        padding: 30px;
+        text-transform: uppercase;
+        text-align: center;
+        letter-spacing: 3px;
+        background: #7c9885;
+    }
+
+    ol li a{
+        color: white;
+        padding: 20px 20px 0px 0px;
+        text-decoration: none;
+        display: block;
+        font-size: 20px;
+        letter-spacing: 1px;
+        position: relative;
+        transition: 0.3s;
+        overflow: hidden;
+        text-transform: capitalize;
+    }
+
+    ol li a i{
+        margin-left: -10px;
+        width: 70px;
+        font-size: 25px;
+        text-align: center;
+    }
+
+    .searchbar{
+        float: right;
+        margin: 140px 23% 0px 0px;  
+    }
+
+    .searchbar input{
+        width: 100%;
+    }
+
+    .convertbtn{
+        float: right;
+        text-decoration: none;
+        margin: 135px -30% 0px 0px;
+        height: 25%;
+        width: 10%;
+        border-radius: 15px;
+        cursor: pointer;
+        background: transparent;
+        color: white;
+        border: 1px solid black;
+        outline: none;
+        font-size: 15px;
+    }
+    
+    .deletebtn{
+        float: right;
+        text-decoration: none;
+        margin: 135px -19.5% 0px 0px;
         height: 25%;
         width: 10%;
         border-radius: 15px;
