--- a/homepage_style.css
+++ b/homepage_style.css
@@ -109,3 +109,115 @@ form .row input::placeholder{
 form .button input:hover{
   background: #5661c4;
 }
+
+footer{
+  opacity: 30%;
+}
+
+/* RESPONSIVE */
+@media screen and (min-width: 768px) {
+  footer{
+    margin-left: 25%;
+    margin-top: -20%;
+  }
+  
+}
+
+@media screen and (min-width: 848px) {
+  footer{
+    margin-left: 25%;
+    margin-top: -15%;
+  }
+  
+}
+
+@media screen and (min-width: 936px) {
+  footer{
+    margin-left: 29%;
+    margin-top: -15%;
+  }
+  
+}
+
+@media screen and (min-width: 1050px) {
+  footer{
+    margin-left: 29%;
+    margin-top: -15%;
+  }
+  
+}
+
+@media screen and (min-width: 1168px) {
+  footer{
+    margin-left: 33.5%;
+    margin-top: -10%;
+  }
+  
+}
+
+@media screen and (min-width: 1257px) {
+  footer{
+    margin-left: 33.5%;
+    margin-top: -10%;
+  }
+  
+}
+
+@media screen and (min-width: 1350px) {
+  footer{
+    margin-left: 35.5%;
+    margin-top: -10%;
+  }
+  
+}
+
+@media screen and (min-width: 1411px) {
+  footer{
+    margin-left: 35.5%;
+    margin-top: -10%;
+  }
+  
+  
+}
+
+
+@media screen and (min-width: 1536px) {
+  footer{
+    margin-left: 37%;
+    margin-top: -10%;
+  }
+  
+  
+}
+
+@media screen and (min-width: 1615px) {
+  footer{
+    margin-left: 38%;
+    margin-top: -8%;
+  }
+  
+}
+
+@media screen and (min-width: 1771px) {
+  footer{
+    margin-left: 39%;
+    margin-top: -8%;
+  }
+  
+}
+
+@media screen and (min-width: 1880px) {
+  footer{
+    margin-left: 39.5%;
+    margin-top: -8%;
+  }
+  
+}
+
+@media screen and (min-width: 1920px) {
+  footer{
+    margin-left: 40%;
+    margin-top: -8%;
+  }
+  
+}
