--- a/request_logs.css
+++ b/request_logs.css
@@ -106,7 +106,7 @@ header h1{
 /* MENU BAR*/
 
 .container{
-    height: 82.1%;
+    height: 82.3%;
     width: 270px;
     position: absolute;
     margin-top: 0px;
@@ -387,7 +387,7 @@ table tr td{
 /* RESPONSIVE */
 @media screen and (min-width: 768px) {
     .container{
-        height: 82.1%;
+        height: 82.3%;
         width: 210px;
         position: absolute;
         margin-top: 0.5%;
@@ -510,11 +510,17 @@ table tr td{
         border: 2px solid black;
         line-height: 20px;
     }
+    .scroll{
+        margin-top: 10px;
+        width: 100%;
+        height: 350px;
+        overflow-y: scroll;
+    }
 }
 
 @media screen and (min-width: 843px) {
     .container{
-        height: 82.1%;
+        height: 79%;
         width: 210px;
         position: absolute;
         margin-top: 0.5%;
@@ -612,7 +618,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 50% 0px 0px 76%;
+        margin: 40% 0px 0px 76%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -637,12 +643,19 @@ table tr td{
         border: 2px solid black;
         line-height: 20px;
     }
+
+    .scroll{
+        margin-top: 10px;
+        width: 100%;
+        height: 300px;
+        overflow-y: scroll;
+    }
     
 }
 
 @media screen and (min-width: 931px) {
     .container{
-        height: 82.1%;
+        height: 79%;
         width: 210px;
         position: absolute;
         margin-top: 0.5%;
@@ -740,7 +753,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 45% 0px 0px 60%;
+        margin: 39% 0px 0px 60%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -765,11 +778,17 @@ table tr td{
         line-height: 20px;
     }
     
+    .scroll{
+        margin-top: 10px;
+        width: 100%;
+        height: 300px;
+        overflow-y: scroll;
+    }
 }
 
 @media screen and (min-width: 1024px) {
     .container{
-        height: 82.1%;
+        height: 78%;
         width: 210px;
         position: absolute;
         margin-top: 0.5%;
@@ -867,7 +886,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 40% 0px 0px 64%;
+        margin: 35% 0px 0px 64%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -897,7 +916,7 @@ table tr td{
 
 @media screen and (min-width: 1041px) {
     .container{
-        height: 82.1%;
+        height: 78%;
         width: 250px;
         position: absolute;
         margin-top: 0.5%;
@@ -995,7 +1014,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 40% 0px 0px 65%;
+        margin: 34% 0px 0px 65%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -1026,7 +1045,7 @@ table tr td{
 
 @media screen and (min-width: 1169px) {
     .container{
-        height: 82.1%;
+        height: 79%;
         width: 250px;
         position: absolute;
         margin-top: 0%;
@@ -1124,7 +1143,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 35% 0px 0px 68%;
+        margin: 30% 0px 0px 68%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -1156,7 +1175,7 @@ table tr td{
 
 @media screen and (min-width: 1280px) {
     .container{
-        height: 82.1%;
+        height: 79%;
         width: 250px;
         position: absolute;
         margin-top: 0%;
@@ -1254,7 +1273,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 35% 0px 0px 65%;
+        margin: 28% 0px 0px 65%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -1283,7 +1302,7 @@ table tr td{
 
 @media screen and (min-width: 1336px) {
     .container{
-        height: 82.1%;
+        height: 79%;
         width: 250px;
         position: absolute;
         margin-top: 0%;
@@ -1381,7 +1400,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 35% 0px 0px 68%;
+        margin: 27% 0px 0px 68%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -1410,7 +1429,7 @@ table tr td{
 
 @media screen and (min-width: 1383px) {
     .container{
-        height: 82.1%;
+        height: 79%;
         width: 270px;
         position: absolute;
         margin-top: 0%;
@@ -1508,7 +1527,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 35% 0px 0px 72%;
+        margin: 27% 0px 0px 72%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -1537,7 +1556,7 @@ table tr td{
 
 @media screen and (min-width: 1440px) {
     .container{
-        height: 82.1%;
+        height: 79%;
         width: 270px;
         position: absolute;
         margin-top: 0%;
@@ -1635,7 +1654,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 30% 0px 0px 73%;
+        margin: 26% 0px 0px 73%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -1664,7 +1683,7 @@ table tr td{
 
 @media screen and (min-width: 1572px) {
     .container{
-        height: 82.1%;
+        height: 82.3%;
         width: 270px;
         position: absolute;
         margin-top: 0%;
@@ -1798,7 +1817,7 @@ table tr td{
 
 @media screen and (min-width: 1742px) {
     .container{
-        height: 82.1%;
+        height: 82.3%;
         width: 270px;
         position: absolute;
         margin-top: 0%;
@@ -1896,7 +1915,7 @@ table tr td{
     }
     .total-quantity{
         position: absolute;
-        margin: 30% 0px 0px 77%;
+        margin: 27% 0px 0px 77%;
     }
     .total-quantity input{
         border: 2px solid black;
@@ -1933,7 +1952,7 @@ table tr td{
 
 @media screen and (min-width: 1880px) {
     .container{
-        height: 82.1%;
+        height: 82.3%;
         width: 290px;
         position: absolute;
         margin-top: 0%;
